Fix DisableSHA1inHandshakeSignatureTLS1{2,3}.java test
List.of() => Collections.unmodifiableList(Arrays.asList())