@@ -26,12 +26,14 @@
  * @bug 8340321
  * @summary Disable SHA-1 in TLS/DTLS 1.2 signatures.
  *          This test only covers TLS 1.3.
- * @library /javax/net/ssl/templates
- *          /test/lib
+ * @library /javax/net/ssl/templates /lib/testlibrary /test/lib
+ * @build jdk.testlibrary.Utils
  * @run main/othervm DisableSHA1inHandshakeSignatureTLS13
  */
 
 import java.security.Security;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class DisableSHA1inHandshakeSignatureTLS13 extends
@@ -57,7 +59,9 @@ public class DisableSHA1inHandshakeSignatureTLS13 extends
     // signatures, but supported for TLSv1.3 certificate signatures.
     @Override
     protected List<String> getDisabledSignatureSchemes() {
-        return List.of("ecdsa_sha1", "rsa_pkcs1_sha1");
+        return Collections.unmodifiableList(Arrays.asList(new String[] {
+            "ecdsa_sha1", "rsa_pkcs1_sha1"
+        }));
     }
 
     // TLSv1.3 sends CertificateRequest signature schemes in
